web-infras/parser/tests/fixtures/babel/es2015/uncategorised/250/output.txt
[SyntaxError]: Parentheses expression can not be empty. (1,1)
1|() <= 42
 |^
